[package]
name = "rgs"
version = "0.2.0"
edition = "2024"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
description = "Tool for querying game servers"
repository = "https://github.com/vorot93/rgs"
keywords = ["game", "games"]
license = "MPL-2.0"

[lib]
name = "rgs"
path = "src/lib.rs"

[[bin]]
name = "rgs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
derive_more = { version = "2", features = ["from"] }
futures = "0.3"
hex = "0.4"
hickory-resolver = "0.26"
iso_country = "0.1"
q3a = { git = "https://github.com/vorot93/q3a-packet-parsers" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surge-ping = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
