[package]
name = "rgs"
version = "0.3.0"
edition = "2024"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
description = "Tool for querying game servers"
repository = "https://github.com/vorot93/rgs"
keywords = ["game", "games"]
license = "MPL-2.0"

[lib]
name = "rgs"
path = "src/lib.rs"

[[bin]]
name = "rgs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
hickory-resolver = "0.26"
q3a = { git = "https://github.com/vorot93/q3a-packet-parsers" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surge-ping = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
